--- a/preamble.tex
+++ b/preamble.tex
@@ -374,6 +374,7 @@
 \newcommand*{\ancestors}{\mathbf{A}}
 \newcommand*{\theancestors}{\ancestors}
 
+\newcommand*{\reporters}{\mathbf{R}}
 \newcommand*{\isticketed}{\mathbf{T}}
 
 % Extrinsics.
@@ -424,6 +425,7 @@
 \newcommand*{\assigners}{\privileges_\mathbf{a}}
 \newcommand*{\alwaysaccers}{\privileges_\mathbf{g}}
 
+
 \newcommand*{\accumulated}{\xi}
 \newcommand*{\ready}{\vartheta}
 \newcommand*{\lastaccout}{\theta}
@@ -458,6 +460,18 @@
 \newcommand*{\accountspostxfer}{\accounts^\ddagger}
 \newcommand*{\accountspostpreimage}{\accounts'}
 \newcommand*{\accountspost}{\accounts'}
+
+\newcommand*{\reports}{\rho}
+\newcommand*{\reportspre}{\reports}
+\newcommand*{\reportspostjudgement}{\reports^\dagger}
+\newcommand*{\reportspostguarantees}{\reports^\ddagger}
+\newcommand*{\reportspostassurances}{\reports'}
+
+\newcommand*{\activity}{\pi}
+\newcommand*{\valstatsaccumulator}{\activity_V}
+\newcommand*{\valstatsprevious}{\activity_L}
+\newcommand*{\corestats}{\activity_C}
+\newcommand*{\servicestats}{\activity_S}
 
 % PVM stuff
 \newcommand*{\gascounter}{\varrho}
