--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -305,7 +305,7 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
           \se_8(\mathsf{B}_S),
           \se_2(\corecount),
           \se_4(\mathsf{D}),
-          \se_4(\mathsf{E}),
+          \se_4(\epochlen),
           \se_8(\mathsf{G}_A),\\
           &\se_8(\mathsf{G}_I),
           \se_8(\mathsf{G}_R),
