--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -21,13 +21,13 @@ The proposition of accumulation is in fact quite simple: we merely wish to execu
 
 Accumulation of a work-package/work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. Formally:
 \begin{align}
-  \accumulated &\in \seq{\{\hash\}}_\mathsf{E} \\
+  \accumulated &\in \seq{\{\hash\}}_\epochlen \\
   \accumulatedcup &\equiv \bigcup_{x \in \accumulated}(x)
 \end{align}
 
 We also maintain knowledge of ready (\ie available and/or audited) but not-yet-accumulated work-reports in the state item $\ready$. Each of these were made available at most one epoch ago but have or had unfulfilled dependencies. Alongside the work-report itself, we retain its unaccumulated dependencies, a set of work-package hashes. Formally:
 \begin{align}
-  \ready &\in \seq{\seq{(\workreport, \{\hash\})}}_\mathsf{E}
+  \ready &\in \seq{\seq{(\workreport, \{\hash\})}}_\epochlen
 \end{align}
 
 The newly available work-reports, $\mathbf{W}$, are partitioned into two sequences based on the condition of having zero prerequisite work-reports. Those meeting the condition, $\mathbf{W}^!$, are accumulated immediately. Those not, $\mathbf{W}^Q$, are for queued execution. Formally:
@@ -78,7 +78,7 @@ Finally, we define the mapping function $\srmap$ which extracts the correspondin
 
 We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
 \begin{align}
-  \using m &= \H_\¬timeslot \bmod \mathsf{E}\\
+  \using m &= \H_\¬timeslot \bmod \epochlen\\
   \mathbf{W}^* &\equiv \mathbf{W}^! \concat Q(\mathbf{q}) \\
   \quad\where \mathbf{q} &= E(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \srmap(\mathbf{W}^!))
 \end{align}
@@ -301,12 +301,12 @@ Note that $\Psi_T$ is defined in appendix \ref{sec:ontransferinvocation} such th
 
 We define the final state of the ready queue and the accumulated map by integrating those work-reports which were accumulated in this block and shifting any from the prior state with the oldest such items being dropped entirely:
 \begin{align}
-  \accumulated'_{\mathsf{E} - 1} &= \srmap(\mathbf{W}^*_{\dots n}) \\
+  \accumulated'_{\epochlen - 1} &= \srmap(\mathbf{W}^*_{\dots n}) \\
   \forall i \in \N_\mathsf{E - 1}: \accumulated'_{i} &\equiv \accumulated_{i + 1} \\
-  \forall i \in \N_\mathsf{E} : \cyclic{\ready'}_{m - i} &\equiv \begin{cases}
-    E(\mathbf{W}^Q, \accumulated'_{\mathsf{E} - 1}) &\when i = 0 \\
+  \forall i \in \N_\epochlen : \cyclic{\ready'}_{m - i} &\equiv \begin{cases}
+    E(\mathbf{W}^Q, \accumulated'_{\epochlen - 1}) &\when i = 0 \\
     [] &\when 1 \le i < \thetime' - \thetime \\
-    E(\cyclic{\ready}_{m - i}, \accumulated'_{\mathsf{E} - 1}) &\when i \ge \thetime' - \thetime
+    E(\cyclic{\ready}_{m - i}, \accumulated'_{\epochlen - 1}) &\when i \ge \thetime' - \thetime
   \end{cases}
 \end{align}
 
